# Dankarus_Voxel_Engine_2025

./: BIOME_PROVIDER_EXPLANATION.md  CMakeLists.txt  FRACTAL_NOISE_EXPLANATION.md  HEIGHTMAP_USAGE.md  NOISE_ALGORITHMS.md  PROJECT_ANALYSIS.md  README.md  TERRAIN_GENERATOR_EXPLANATION.md  settings.json  world.vxl
Navezgane/: checksums.txt  version.txt  water_info.xml
Water/: WaterClippingUtils.cs  WaterClippingVolume.cs  WaterConstants.cs  WaterDataHandle.cs  WaterDebug.cs  WaterDebugAssets.cs  WaterDebugManager.cs  WaterDebugPools.cs  WaterDebugRenderer.cs  WaterDebugRendererLayer.cs  WaterEvaporationManager.cs  WaterFlow.cs  WaterInfo.cs  WaterMeshUtils.cs  WaterNeighborCacheNative.cs  WaterSimulationApplyChanges.cs  WaterSimulationApplyFlows.cs  WaterSimulationCalcFlows.cs  WaterSimulationNative.cs  WaterSimulationPostProcess.cs  WaterSimulationPreProcess.cs  WaterSourceInfo.cs  WaterSplashCubes.cs  WaterStats.cs  WaterStatsProfiler.cs  WaterUtils.cs  WaterValue.cs  WaterVoxelState.cs  WaterVoxelUpdate.cs  water_reflectionMirror.cs
WorldGenerationEngineFinal/: DataMap`1.cs  District.cs  DistrictPlanner.cs  DistrictPlannerStatic.cs  GenerationLayer.cs  HighwayPlanner.cs  POISmoother.cs  Path.cs  PathNode.cs  PathNodePool.cs  PathShared.cs  PathTile.cs  PathingUtils.cs  PrefabManager.cs  PrefabManagerData.cs  PrefabManagerStatic.cs  Rand.cs  RandomCountyNameGenerator.cs  RawStamp.cs  Stamp.cs  StampGroup.cs  StampManager.cs  StreetTile.cs  StreetTileShared.cs  TerrainType.cs  TileGroup.cs  TownPlanner.cs  Township.cs  TownshipData.cs  TownshipShared.cs  TranslationData.cs  Usages of 'WorldGenerationEngineFinal'.txt  WildernessPathPlanner.cs  WildernessPlanner.cs  WorldBuilder.cs  WorldBuilderConstants.cs  WorldBuilderStatic.cs  WorldGenerationFromXml.cs
res/: main.glslf  mc_frag.glsl  ui.glslf  ui.glslv  voxel_frag.glsl
res/shaders/: mc_frag.glsl  ui.glslf  voxel_vert.glsl  water_vert.glsl
src/: create_font_test.py  main.cpp  typedefs.h  voxel_engine.cpp
src/coders/: commons.cpp  commons.h  json.cpp  json.h  png.cpp  png.h  toml.cpp  toml.h
src/engine/: Engine.cpp  Engine.h  Game.cpp  Game.h  Renderer.cpp  Renderer.h  WorldManager.cpp  WorldManager.h
src/files/: files.cpp  files.h
src/frontend/: GameState.h  Menu.cpp  Menu.h
src/graphics/: Batch2D.cpp  Batch2D.h  FarWaterRenderer.cpp  FarWaterRenderer.h  Font.cpp  Font.h  ImageData.cpp  ImageData.h  MarchingCubes.cpp  MarchingCubes.h  MeshBounds.h  MeshFile.cpp  MeshFile.h  MeshPool.cpp  MeshPool.h  Shader.cpp  Shader.h  Sprite.h  Texture.h  (+6 more)
worlds/: 1203798280.vxl  41346122.vxl  jopa.vxl  pohuy.vxl  popa.vxl  zalasas.vxl  zalupa.vxl  ÐÐ¾Ð²Ñ‹Ð¹ Ð¼Ð¸Ñ€2111111.vxl
(+198 files in other folders)
